feat: desktop app support, UI fixes, and media loader configuration